--- a/quotes/fence-adjust.html
+++ b/quotes/fence-adjust.html
@@ -9,16 +9,20 @@
 <meta name="description" content="Get a fully customisable fence installation quote online for Askern DN6 and a six mile radius. Adjust for gates, ground type, bespoke panel heights, hedges, trees, and more. Instant materials, labour, and total cost calculation.">
 
 <link rel="preload" as="image" href="/images/logo.webp" />
+
 <style>
-body{margin:0;font-family:Arial,sans-serif;background:#f9f9f9;color:#222;}
-main{max-width:900px;margin:auto;background:#fff;padding:20px;}
-h1,h2{color:#111;}
-label{display:block;margin-top:12px;font-weight:bold;}
-input,select{width:100%;padding:8px;margin-top:4px;}
-button{background:#000;color:#fff;padding:14px;border:none;font-size:16px;margin-top:15px;cursor:pointer;width:100%;}
-button:hover{background:#333;}
-.result-box{background:#f0f0f0;padding:15px;margin-top:20px;border-radius:6px;}
-.hidden{display:none;}
+/* HEADER STYLING */
+header{
+text-align:center;
+padding:25px 10px;
+background:#fff;
+border-bottom:4px solid #27ae60;
+}
+.logo{
+max-height:90px;
+width:auto;
+}
+/* CALL BUTTON */
 .call-btn{
 display:inline-block;
 margin-top:18px;
@@ -31,8 +35,47 @@ font-weight:bold;
 border-radius:6px;
 border:2px solid #000;
 }
-.call-btn:hover{background:#333;}
-.logo{max-height:90px;width:auto;}
+.call-btn:hover{
+background:#333;
+color:#fff;
+}
+/* MAIN */
+main{
+max-width:900px;
+margin:auto;
+background:#fff;
+padding:20px;
+}
+h1,h2{color:#111;}
+label{
+display:block;
+margin-top:12px;
+font-weight:bold;
+}
+input,select{
+width:100%;
+padding:8px;
+margin-top:4px;
+}
+button{
+background:#000;
+color:#fff;
+padding:14px;
+border:none;
+font-size:16px;
+margin-top:15px;
+cursor:pointer;
+width:100%;
+}
+button:hover{background:#333;}
+.result-box{
+background:#f0f0f0;
+padding:15px;
+margin-top:20px;
+border-radius:6px;
+}
+.hidden{display:none;}
+/* FOOTER */
 .site-footer{
 background:#000;
 color:#fff;
@@ -52,17 +95,59 @@ color:white;
 margin:0 10px;
 }
 </style>
+
+<!-- Schema -->
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"LocalBusiness",
+"name":"Home Repairs 4U",
+"url":"https://homerepairs4u.com/",
+"image":"https://homerepairs4u.com/images/logo.webp",
+"telephone":"+447735873694",
+"address":{
+"@type":"PostalAddress",
+"addressLocality":"Askern",
+"postalCode":"DN6",
+"addressRegion":"South Yorkshire",
+"addressCountry":"GB"
+},
+"description":"Professional fence installation and home services in Askern DN6 and a six mile radius.",
+"areaServed":{
+"@type":"GeoCircle",
+"geoMidpoint":{"@type":"GeoCoordinates","latitude":53.616,"longitude":-1.152},
+"geoRadius":16093
+},
+"makesOffer":[{"@type":"Offer","itemOffered":{"@type":"Service","name":"Fence Installation"}}]
+}
+</script>
+
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"FAQPage",
+"mainEntity":[
+{"@type":"Question","name":"Which areas do you cover?","acceptedAnswer":{"@type":"Answer","text":"We serve Askern DN6 and a six mile radius including surrounding villages."}},
+{"@type":"Question","name":"Are your services insured?","acceptedAnswer":{"@type":"Answer","text":"Yes, all services are fully insured for peace of mind."}},
+{"@type":"Question","name":"Can I book multiple services?","acceptedAnswer":{"@type":"Answer","text":"Yes, multiple services can be booked together."}},
+{"@type":"Question","name":"Do you provide free consultations?","acceptedAnswer":{"@type":"Answer","text":"Yes, we offer free consultations to assess requirements and provide accurate quotes."}}
+]
+}
+</script>
+
 </head>
 <body>
 
-<!-- HEADER (UNCHANGED) -->
+<!-- HEADER -->
 <header>
+<div style="text-align:center;">
 <img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200" loading="eager">
-<div style="text-align:center; margin-top:10px;">
+<div style="margin-top:10px;">
 <a href="https://steely1968.github.io/" style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
 </div>
 <br>
 <a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
+</div>
 </header>
 
 <main>
@@ -91,7 +176,6 @@ margin:0 10px;
 <label>How Many Gates?</label>
 <input type="number" id="gateCount">
 <div id="gateInputs"></div>
-
 <label>Are Gates Part Of Fence?</label>
 <select id="gatePart">
 <option value="yes">Yes</option>
@@ -151,7 +235,7 @@ margin:0 10px;
 
 <h2>Featheredge Fence Installation in Askern</h2>
 <p>
-We specialise in installing strong, long-lasting featheredge fencing using concrete posts and optional gravel boards.
+We specialise in installing strong, long-lasting featheredge fencing using concrete posts and concrete gravel boards.
 This system is designed to withstand high winds, wet ground, and heavy use while keeping your garden private and secure.
 Every fence is built to your required height and layout rather than forcing you into standard sizes.
 </p>
@@ -201,7 +285,7 @@ Trees over 3 metres require specialist equipment and will be quoted as a separat
 <p>
 Featheredge fencing is one of the strongest and most flexible fencing systems available.
 It allows for sloping ground, uneven levels and custom heights while remaining secure and long-lasting.
-Combined with concrete posts and optional gravel boards, it offers excellent resistance to rot, moisture and storm damage.
+Combined with concrete posts and gravel boards, it offers excellent resistance to rot, moisture and storm damage.
 </p>
 
 <p>
@@ -221,56 +305,9 @@ If you are unsure about any option in the calculator, you can still submit your 
 everything with you before work begins.
 </p>
 
-<!-- Schema & FAQ -->
-<script type="application/ld+json">
-{
-"@context":"https://schema.org",
-"@type":"LocalBusiness",
-"name":"Home Repairs 4U",
-"image":"https://homerepairs4u.com/images/logo.webp",
-"url":"https://homerepairs4u.com/",
-"telephone":"+447735873694",
-"address":{
-"@type":"PostalAddress",
-"addressLocality":"Askern",
-"postalCode":"DN6",
-"addressRegion":"South Yorkshire",
-"addressCountry":"GB"
-},
-"description":"Professional home services in Askern DN6 including exterior decorating, fence installation, garden maintenance, gutter replacement, pressure washing, and uPVC restoration.",
-"areaServed":{
-"@type":"GeoCircle",
-"geoMidpoint":{"@type":"GeoCoordinates","latitude":53.616,"longitude":-1.152},
-"geoRadius":16093
-},
-"openingHoursSpecification":[{
-"@type":"OpeningHoursSpecification",
-"dayOfWeek":["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"],
-"opens":"07:00",
-"closes":"20:00"
-}],
-"makesOffer":[
-{"@type":"Offer","itemOffered":{"@type":"Service","name":"Fence Installation"}}
-]
-}
-</script>
-
-<script type="application/ld+json">
-{
-"@context":"https://schema.org",
-"@type":"FAQPage",
-"mainEntity":[
-{"@type":"Question","name":"Which areas do you cover?","acceptedAnswer":{"@type":"Answer","text":"We serve Askern DN6 and a six-mile radius including surrounding villages."}},
-{"@type":"Question","name":"Are your services insured?","acceptedAnswer":{"@type":"Answer","text":"Yes, all our services are fully insured to ensure peace of mind and reliable workmanship."}},
-{"@type":"Question","name":"Can I book multiple services at the same time?","acceptedAnswer":{"@type":"Answer","text":"Yes, we can schedule multiple services together for convenience and efficiency."}},
-{"@type":"Question","name":"Do you offer free consultations?","acceptedAnswer":{"@type":"Answer","text":"Yes, we provide free consultations to assess your requirements and give accurate quotes."}}
-]
-}
-</script>
-
 </main>
 
-<!-- FOOTER (UNCHANGED) -->
+<!-- FOOTER -->
 <footer class="site-footer">
 © Home Repairs 4U | Askern DN6 | Call 07735 873694
 <div class="footer-services">
@@ -304,31 +341,40 @@ function calculate(){
 let length=+lengthInput.value||0;
 let height=+heightInput.value||0;
 let total=0;
-
-if(length>0 && height>0){
 let panels=Math.ceil(length/1.8);
-let panelPrice=40;
 
-if(gravel.value=="yes" && height>0) height-=0.3;
+// Adjust for gravel boards
+if(gravel.value=="yes") height+=0.3;
 
-total+=panels*panelPrice;
+// Panels price
+total+=panels*40;
 
-let posts=panels>0?panels+1:0;
-total+=posts*13; // posts
+// Posts
+let posts=panels+1;
+total+=posts*13;
 total+=posts*2*5; // post mix
-total+=panels*15; // gravel boards
 total+=posts*70; // labour
 
-if(concrete.value=="yes") total+= +concretePanels.value*12;
-if(roots.value=="yes") total+= +rootPanels.value*3;
-if(hedges.value=="yes") total+= +hedgeMetres.value*50;
+// Gravel boards
+if(gravel.value=="yes") total+=panels*15;
 
+// Concrete panels
+if(concrete.value=="yes") total+=+concretePanels.value*12;
+
+// Heavy roots
+if(roots.value=="yes") total+=+rootPanels.value*3;
+
+// Hedges
+if(hedges.value=="yes") total+=+hedgeMetres.value*50;
+
+// Trees
 if(trees.value=="yes"){
 let h=+treeHeight.value;
 if(h<=3) total+=h*100;
 else total+=200;
 }
 
+// Gates
 if(gates.value=="yes"){
 let c=+gateCount.value||0;
 let gtotal=0;
@@ -337,7 +383,6 @@ let w=+document.getElementById("gw"+i).value||0;
 gtotal+=w*150;
 }
 total+=gtotal;
-}
 }
 
 result.innerHTML="<strong>Estimated Total: £"+total.toFixed(2)+"</strong>";
